--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "lottie-react-native": "^6.7.2",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-pager-view": "^6.4.1",
-    "react-native-reanimated": "^3.15.1",
+    "react-native-reanimated": "^3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-swiper-flatlist": "^3.2.5",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
